--- a/requirements.txt
+++ b/requirements.txt
@@ -18,8 +18,8 @@ brotli=1.0.9=he6710b0_2
 brotlipy=0.7.0=py38h7b6447c_1000
 bzip2=1.0.8=h7b6447c_0
 c-ares=1.16.1=h7b6447c_0
-ca-certificates=2020.7.22=0
-certifi=2020.6.20=py38_0
+ca-certificates=2020.12.8=h06a4308_0
+certifi=2020.12.5=py38h06a4308_0
 cffi=1.14.3=py38he30daa8_0
 click=7.1.2=py_0
 constantly=15.1.0=py_0
@@ -29,8 +29,8 @@ cycler=0.10.0=py38_0
 dbus=1.13.16=hb2f20db_0
 decorator=4.4.2=py_0
 defusedxml=0.6.0=py_0
+dill=0.3.3=pyhd3eb1b0_0
 double-conversion=3.1.5=he6710b0_1
-dstools=0.1=dev_0
 easyprocess=0.3=py38h32f6830_2
 entrypoints=0.3=py38_0
 expat=2.2.10=he6710b0_2
@@ -106,7 +106,7 @@ notebook=6.1.4=py38_0
 numpy=1.19.1=py38hbc911f0_0
 numpy-base=1.19.1=py38hfa32c7d_0
 olefile=0.46=py_0
-openssl=1.1.1h=h7b6447c_0
+openssl=1.1.1i=h27cfd23_0
 packaging=20.4=py_0
 pandas=1.1.3=py38he6710b0_0
 pandoc=2.10.1=0
