--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,15 +1,13 @@
-version: '3.3'
+version: "3"
 services:
-    shiny:
-      build:
-        context: .
-        dockerfile: dash.dockerfile
-      ports:
-        - "3838:3838"
+  app:
+    build:
+      context: .
+      dockerfile: app.dockerfile
 
-    app:
-      build: 
-        context: .
-        dockerfile: app.dockerfile
-      ports: 
-          - "4040:4040"
+  # shiny:
+  #   build:
+  #     context: .
+  #     dockerfile: dash.dockerfile
+  #   ports:
+  #     - "3838:3838"
