--- a/aluguel/config/config.toml
+++ b/aluguel/config/config.toml
@@ -3,7 +3,7 @@ title = "ConfigFile"
 site = ["zap", "vivareal"]
 local = "Tijuca"
 # pegar_bairro = false
-max_page = 5
+max_page = 1
 
 valor_minimo = 1500
 valor_maximo = 3500
@@ -19,7 +19,7 @@ urls_metro_trem = [
         browserName = "firefox"
         browserVersion = "83.0"
         [webdriver.desired_capabilities."selenoid:options"]
-            enableVNC = false
+            enableVNC = true
             enableVideo = true
             enableLog = false
 
