--- a/env.yml
+++ b/env.yml
@@ -5,15 +5,18 @@ dependencies:
   - _libgcc_mutex=0.1=main
   - attrs=20.3.0=pyhd3eb1b0_0
   - automat=20.2.0=py_0
+  - backcall=0.2.0=py_0
   - bcrypt=3.2.0=py37h7b6447c_0
   - blas=1.0=mkl
   - brotlipy=0.7.0=py37h27cfd23_1003
   - ca-certificates=2020.12.8=h06a4308_0
   - certifi=2020.12.5=py37h06a4308_0
   - cffi=1.14.4=py37h261ae71_0
+  - chardet=4.0.0=py37h06a4308_1003
   - constantly=15.1.0=py37h28b3542_0
   - cryptography=3.3.1=py37h3c74f83_0
   - cssselect=1.1.0=py_0
+  - decorator=4.4.2=py_0
   - hyperlink=20.0.1=py_0
   - icu=58.2=he6710b0_3
   - idna=2.10=py_0
@@ -22,7 +25,10 @@ dependencies:
   - incremental=17.5.0=py37_0
   - iniconfig=1.1.1=py_0
   - intel-openmp=2020.2=254
+  - ipython=7.19.0=py37hb070fc8_0
+  - ipython_genutils=0.2.0=pyhd3eb1b0_1
   - itemadapter=0.2.0=pyhd3eb1b0_0
+  - jedi=0.18.0=py37h06a4308_0
   - joblib=1.0.0=pyhd3eb1b0_0
   - jsonlines=1.2.0=py_2
   - ld_impl_linux-64=2.33.1=h53a641e_7
@@ -39,6 +45,8 @@ dependencies:
   - mkl_fft=1.2.0=py37h23d657b_0
   - mkl_random=1.1.1=py37h0573a6f_0
   - more-itertools=8.6.0=pyhd3eb1b0_0
+  - mypy=0.790=py_0
+  - mypy_extensions=0.4.3=py37_0
   - ncurses=6.2=he6710b0_1
   - numpy=1.19.2=py37h54aff64_0
   - numpy-base=1.19.2=py37hfa32c7d_0
@@ -46,13 +54,20 @@ dependencies:
   - packaging=20.8=pyhd3eb1b0_0
   - pandas=1.1.5=py37ha9443f7_0
   - parsel=1.5.2=py37_0
+  - parso=0.7.0=py_0
+  - pexpect=4.8.0=pyhd3eb1b0_3
+  - pickleshare=0.7.5=pyhd3eb1b0_1003
   - pip=20.3.3=py37h06a4308_0
   - pluggy=0.13.1=py37_0
+  - prompt-toolkit=3.0.8=py_0
+  - psutil=5.7.2=py37h7b6447c_0
+  - ptyprocess=0.7.0=pyhd3eb1b0_2
   - py=1.10.0=pyhd3eb1b0_0
   - pyasn1=0.4.8=py_0
   - pyasn1-modules=0.2.8=py_0
   - pycparser=2.20=py_2
   - pydispatcher=2.0.5=py37_1
+  - pygments=2.7.3=pyhd3eb1b0_0
   - pyhamcrest=2.0.2=py_0
   - pyopenssl=20.0.1=pyhd3eb1b0_1
   - pyparsing=2.4.7=py_0
@@ -64,6 +79,7 @@ dependencies:
   - pytz=2020.4=pyhd3eb1b0_0
   - queuelib=1.5.0=py37_0
   - readline=8.0=h7b6447c_0
+  - requests=2.25.1=pyhd3eb1b0_0
   - scipy=1.5.2=py37h0b6359f_0
   - scrapy=2.4.1=py37h06a4308_0
   - selenium=3.141.0=py37h14c3975_1001
@@ -74,9 +90,13 @@ dependencies:
   - tk=8.6.10=hbc83047_0
   - toml=0.10.1=py_0
   - tqdm=4.54.1=pyhd3eb1b0_0
+  - traitlets=5.0.5=py_0
   - twisted=20.3.0=py37h7b6447c_0
+  - typed-ast=1.4.1=py37h7b6447c_0
+  - typing_extensions=3.7.4.3=py_0
   - urllib3=1.26.2=pyhd3eb1b0_0
   - w3lib=1.21.0=py_0
+  - wcwidth=0.2.5=py_0
   - wheel=0.36.2=pyhd3eb1b0_0
   - xz=5.2.5=h7b6447c_0
   - zipp=3.4.0=pyhd3eb1b0_0
@@ -84,7 +104,6 @@ dependencies:
   - zope=1.0=py37_1
   - zope.interface=5.2.0=py37h27cfd23_0
   - pip:
-    - decorator==4.4.2
     - easyprocess==0.3
     - geographiclib==1.50
     - geopy==2.0.0
