--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,13 +1,32 @@
 version: "3"
 services:
-  app:
+
+  shiny:
     build:
       context: .
-      dockerfile: app.dockerfile
+      dockerfile: dash.dockerfile
+    ports:
+      - "3838:3838"
 
-  # shiny:
-  #   build:
-  #     context: .
-  #     dockerfile: dash.dockerfile
+  selenoid:
+    image: aerokube/selenoid:latest-release
+    network_mode: bridge
+    ports:
+      - "4444:4444"
+    command: ["-log-output-dir", "/opt/selenoid/logs"]
+    environment: 
+      - OVERRIDE_VIDEO_OUTPUT_DIR=$PWD/video/
+    volumes:
+      - "$PWD/config:/etc/selenoid/"
+      - "$PWD/video/:/opt/selenoid/video/"
+      - "$PWD/logs/:/opt/selenoid/logs/"
+      - "/var/run/docker.sock:/var/run/docker.sock"
+
+  # selenoid-ui:
+  #   image: aerokube/selenoid-ui:latest-release
+  #   network_mode: bridge
+  #   links:
+  #     - selenoid
   #   ports:
-  #     - "3838:3838"
+  #     - "8080:8080"
+  #   command: ["--selenoid-uri", "http://selenoid:4444"]
