--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,11 +12,17 @@ jsonlines = "^2.0.0"
 Scrapy = "^2.4.1"
 geopy = "^2.1.0"
 pyarrow = "^3.0.0"
+scikit-learn = "^0.24.1"
+lightgbm = "^3.1.1"
+scikit-optimize = "^0.8.1"
+xgboost = "^1.3.3"
+Flask = "^1.1.2"
 
 [tool.poetry.dev-dependencies]
 mypy = "^0.812"
 black = "^20.8b1"
 jupyterlab = "^3.0.10"
+matplotlib = "^3.3.4"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
