--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,6 +17,8 @@ lightgbm = "^3.1.1"
 scikit-optimize = "^0.8.1"
 xgboost = "^1.3.3"
 Flask = "^1.1.2"
+Flask-Bootstrap = "^3.3.7"
+folium = "^0.12.1"
 
 [tool.poetry.dev-dependencies]
 mypy = "^0.812"
