--- a/pyproject.toml
+++ b/pyproject.toml
@@ -20,6 +20,7 @@ Flask = "^1.1.2"
 Flask-Bootstrap = "^3.3.7"
 folium = "^0.12.1"
 toml = "^0.10.2"
+gunicorn = "^20.1.0"
 
 [tool.poetry.dev-dependencies]
 mypy = "^0.812"
