--- a/pyproject.toml
+++ b/pyproject.toml
@@ -19,6 +19,9 @@ xgboost = "^1.3.3"
 Flask = "^1.1.2"
 folium = "^0.12.1"
 toml = "^0.10.2"
+gunicorn = "^20.1.0"
+lxml = "^4.6.3"
+requests = "^2.25.1"
 
 [tool.poetry.dev-dependencies]
 mypy = "^0.812"
