--- a/requirements.txt
+++ b/requirements.txt
@@ -6,12 +6,11 @@ click==7.1.2; python_version >= "2.7" and python_full_version < "3.0.0" or pytho
 constantly==15.1.0; python_full_version >= "3.5.4" and python_version >= "3.6"
 cryptography==3.4.6; python_version >= "3.6" and python_full_version < "3.0.0" or python_full_version >= "3.5.0" and python_version >= "3.6"
 cssselect==1.1.0; python_version >= "3.6" and python_full_version < "3.0.0" or python_full_version >= "3.4.0" and python_version >= "3.6"
-dominate==2.6.0; python_version >= "2.7" and python_full_version < "3.0.0" or python_full_version >= "3.4.0"
-flask-bootstrap==3.3.7.1
 flask==1.1.2; (python_version >= "2.7" and python_full_version < "3.0.0") or (python_full_version >= "3.5.0")
 folium==0.12.1; python_version >= "3.5"
 geographiclib==1.50; python_version >= "3.5"
 geopy==2.1.0; python_version >= "3.5"
+gunicorn==20.1.0; python_version >= "3.5"
 hyperlink==21.0.0; python_full_version >= "3.5.4" and python_version >= "3.6"
 idna==3.1; python_full_version >= "3.5.4" and python_version >= "3.6"
 incremental==21.3.0; python_full_version >= "3.5.4" and python_version >= "3.6"
@@ -50,10 +49,10 @@ selenium==3.141.0
 service-identity==18.1.0; python_version >= "3.6"
 six==1.15.0; python_full_version >= "3.7.1" and python_version >= "3.6" and (python_version >= "3.6" and python_full_version < "3.0.0" or python_full_version >= "3.5.0" and python_version >= "3.6") and (python_version >= "3.6" and python_full_version < "3.0.0" or python_full_version >= "3.3.0" and python_version >= "3.6")
 threadpoolctl==2.1.0; python_version >= "3.6"
+toml==0.10.2; (python_version >= "2.6" and python_full_version < "3.0.0") or (python_full_version >= "3.3.0")
 twisted-iocpsupport==1.0.1; python_full_version >= "3.5.4" and python_version >= "3.6" and platform_system == "Windows"
 twisted==21.2.0; python_full_version >= "3.5.4" and python_version >= "3.6"
 urllib3==1.26.4; python_version >= "2.7" and python_full_version < "3.0.0" or python_full_version >= "3.5.0" and python_version < "4"
-visitor==0.1.3
 w3lib==1.22.0; python_version >= "3.6"
 werkzeug==1.0.1; python_version >= "2.7" and python_full_version < "3.0.0" or python_full_version >= "3.5.0"
 xgboost==1.3.3; python_version >= "3.6"
