--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,9 @@
 attrs==20.3.0; python_full_version >= "3.5.4" and python_version >= "3.6"
 automat==20.2.0; python_full_version >= "3.5.4" and python_version >= "3.6"
 branca==0.4.2; python_version >= "3.5"
+certifi==2020.12.5; python_version >= "3.5" and python_full_version < "3.0.0" or python_full_version >= "3.5.0" and python_version >= "3.5"
 cffi==1.14.5; python_version >= "3.6"
+chardet==4.0.0; python_version >= "3.5" and python_full_version < "3.0.0" or python_full_version >= "3.5.0" and python_version >= "3.5"
 click==7.1.2; python_version >= "2.7" and python_full_version < "3.0.0" or python_full_version >= "3.5.0"
 constantly==15.1.0; python_full_version >= "3.5.4" and python_version >= "3.6"
 cryptography==3.4.6; python_version >= "3.6" and python_full_version < "3.0.0" or python_full_version >= "3.5.0" and python_version >= "3.6"
@@ -12,7 +14,7 @@ geographiclib==1.50; python_version >= "3.5"
 geopy==2.1.0; python_version >= "3.5"
 gunicorn==20.1.0; python_version >= "3.5"
 hyperlink==21.0.0; python_full_version >= "3.5.4" and python_version >= "3.6"
-idna==3.1; python_full_version >= "3.5.4" and python_version >= "3.6"
+idna==2.10; python_full_version >= "3.5.4" and python_version >= "3.6"
 incremental==21.3.0; python_full_version >= "3.5.4" and python_version >= "3.6"
 itemadapter==0.2.0; python_version >= "3.6"
 itemloaders==1.0.4; python_version >= "3.6"
@@ -22,7 +24,7 @@ jmespath==0.10.0; python_version >= "3.6" and python_full_version < "3.0.0" or p
 joblib==1.0.1; python_version >= "3.6"
 jsonlines==2.0.0; python_version >= "3.6"
 lightgbm==3.1.1
-lxml==4.6.2; python_version >= "3.6" and python_full_version < "3.0.0" or python_full_version >= "3.5.0" and python_version >= "3.6"
+lxml==4.6.3; (python_version >= "2.7" and python_full_version < "3.0.0") or (python_full_version >= "3.5.0")
 markupsafe==1.1.1; python_version >= "2.7" and python_full_version < "3.0.0" or python_full_version >= "3.5.0"
 numpy==1.20.1; python_version >= "3.7" and python_full_version >= "3.7.1"
 pandas==1.2.3; python_full_version >= "3.7.1"
@@ -40,7 +42,7 @@ python-dateutil==2.8.1; python_full_version >= "3.7.1"
 pytz==2021.1; python_full_version >= "3.7.1"
 pyyaml==5.4.1; python_version >= "2.7" and python_full_version < "3.0.0" or python_full_version >= "3.6.0"
 queuelib==1.5.0; python_version >= "3.6"
-requests==2.15.1; python_version >= "3.5"
+requests==2.25.1; (python_version >= "2.7" and python_full_version < "3.0.0") or (python_full_version >= "3.5.0")
 scikit-learn==0.24.1; python_version >= "3.6"
 scikit-optimize==0.8.1
 scipy==1.6.1; python_version >= "3.7"
@@ -52,7 +54,7 @@ threadpoolctl==2.1.0; python_version >= "3.6"
 toml==0.10.2; (python_version >= "2.6" and python_full_version < "3.0.0") or (python_full_version >= "3.3.0")
 twisted-iocpsupport==1.0.1; python_full_version >= "3.5.4" and python_version >= "3.6" and platform_system == "Windows"
 twisted==21.2.0; python_full_version >= "3.5.4" and python_version >= "3.6"
-urllib3==1.26.4; python_version >= "2.7" and python_full_version < "3.0.0" or python_full_version >= "3.5.0" and python_version < "4"
+urllib3==1.26.4; python_version >= "3.5" and python_full_version < "3.0.0" or python_full_version >= "3.5.0" and python_version < "4" and python_version >= "3.5"
 w3lib==1.22.0; python_version >= "3.6"
 werkzeug==1.0.1; python_version >= "2.7" and python_full_version < "3.0.0" or python_full_version >= "3.5.0"
 xgboost==1.3.3; python_version >= "3.6"
