--- a/pyproject.toml
+++ b/pyproject.toml
@@ -22,6 +22,7 @@ toml = "^0.10.2"
 gunicorn = "^20.1.0"
 lxml = "^4.6.3"
 requests = "^2.25.1"
+Flask-WTF = "^0.14.3"
 
 [tool.poetry.dev-dependencies]
 mypy = "^0.812"
