--- a/requirements.txt
+++ b/requirements.txt
@@ -8,6 +8,7 @@ click==7.1.2; python_version >= "2.7" and python_full_version < "3.0.0" or pytho
 constantly==15.1.0; python_full_version >= "3.5.4" and python_version >= "3.6"
 cryptography==3.4.6; python_version >= "3.6" and python_full_version < "3.0.0" or python_full_version >= "3.5.0" and python_version >= "3.6"
 cssselect==1.1.0; python_version >= "3.6" and python_full_version < "3.0.0" or python_full_version >= "3.4.0" and python_version >= "3.6"
+flask-wtf==0.14.3
 flask==1.1.2; (python_version >= "2.7" and python_full_version < "3.0.0") or (python_full_version >= "3.5.0")
 folium==0.12.1; python_version >= "3.5"
 geographiclib==1.50; python_version >= "3.5"
@@ -57,5 +58,6 @@ twisted==21.2.0; python_full_version >= "3.5.4" and python_version >= "3.6"
 urllib3==1.26.4; python_version >= "3.5" and python_full_version < "3.0.0" or python_full_version >= "3.5.0" and python_version < "4" and python_version >= "3.5"
 w3lib==1.22.0; python_version >= "3.6"
 werkzeug==1.0.1; python_version >= "2.7" and python_full_version < "3.0.0" or python_full_version >= "3.5.0"
+wtforms==2.3.3
 xgboost==1.3.3; python_version >= "3.6"
 zope.interface==5.2.0; python_full_version >= "3.5.4" and python_version >= "3.6"
