--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,8 +6,7 @@ authors = ["Douglas Braga <douglasmartinsbraga@gmail.com>"]
 
 [tool.poetry.dependencies]
 python = "^3.8"
-selenium = "^3.141.0"
-pandas = "^1.2.3"
+pandas = "^1.2.3,<1.3"
 jsonlines = "^2.0.0"
 Scrapy = "^2.4.1"
 geopy = "^2.1.0"
@@ -15,7 +14,6 @@ pyarrow = "^3.0.0"
 scikit-learn = "^0.24.1"
 lightgbm = "^3.1.1"
 scikit-optimize = "^0.8.1"
-xgboost = "^1.3.3"
 Flask = "^1.1.2"
 folium = "^0.12.1"
 toml = "^0.10.2"
