--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,5 +1,5 @@
 [tool.poetry]
-name = "get_imoveis"
+name = "listings"
 version = "0.1.0"
 description = ""
 authors = ["Douglas Braga <douglasmartinsbraga@gmail.com>"]
@@ -7,10 +7,7 @@ authors = ["Douglas Braga <douglasmartinsbraga@gmail.com>"]
 [tool.poetry.dependencies]
 python = "^3.8"
 pandas = "^1.2.3,<1.3"
-jsonlines = "^2.0.0"
-Scrapy = "^2.4.1"
 geopy = "^2.1.0"
-pyarrow = "^3.0.0"
 scikit-learn = "^0.24.1"
 lightgbm = "^3.1.1"
 scikit-optimize = "^0.8.1"
@@ -20,7 +17,13 @@ toml = "^0.10.2"
 gunicorn = "^20.1.0"
 lxml = "^4.6.3"
 requests = "^2.25.1"
-Flask-WTF = "^0.14.3"
+Flask-SQLAlchemy = "^2.5.1"
+Flask-Migrate = "^3.0.1"
+flask-marshmallow = "^0.14.0"
+marshmallow-sqlalchemy = "^0.26.1"
+dynaconf = "^3.1.4"
+python-dotenv = "^0.18.0"
+psycopg2-binary = "^2.9.1"
 
 [tool.poetry.dev-dependencies]
 mypy = "^0.812"
