--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,10 +2,31 @@ version: "3.9"
 services:
     app:
         build: .
-        environment:
-            - PORT=5000
+        restart: always
+        env_file: 
+            - ./production.env
         ports:
-            - "5000:5000"
+            - ${PORT}:${PORT}
+        networks:
+            - network
+        depends_on:
+            - db
+
+    db:
+        image: postgres
+        restart: always
+        env_file: 
+            - ./production.env
+        ports:
+            - "15432:5432"
         volumes:
-            - "./data:/app/data"
-            - "./logs:/app/logs"
+            - pgdata:/var/lib/postgresql/data
+        networks:
+            - network
+
+networks: 
+    network:
+
+volumes:
+    pgdata:
+
