--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,9 +8,7 @@ authors = ["Douglas Braga <douglasmartinsbraga@gmail.com>"]
 python = "^3.8"
 pandas = "^1.2.3,<1.3"
 geopy = "^2.1.0"
-scikit-learn = "^0.24.1"
-lightgbm = "^3.1.1"
-scikit-optimize = "^0.8.1"
+scikit-learn = "0.23.2"
 Flask = "^1.1.2"
 folium = "^0.12.1"
 toml = "^0.10.2"
@@ -24,12 +22,19 @@ marshmallow-sqlalchemy = "^0.26.1"
 dynaconf = "^3.1.4"
 python-dotenv = "^0.18.0"
 psycopg2-binary = "^2.9.1"
+lightgbm = "^3.2.1"
 
 [tool.poetry.dev-dependencies]
 mypy = "^0.812"
 black = "^20.8b1"
 jupyterlab = "^3.0.10"
 matplotlib = "^3.3.4"
+xgboost = "^1.4.2"
+tqdm = "^4.62.1"
+plotly = "^5.2.1"
+ipywidgets = "^7.6.3"
+ray = {extras = ["default"], version = "^1.6.0"}
+optuna = "^2.9.1"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
