--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,6 @@
-alembic==1.6.5; python_version >= "3.6" and python_full_version < "3.0.0" or python_full_version >= "3.6.0" and python_version >= "3.6" \
-    --hash=sha256:e78be5b919f5bb184e3e0e2dd1ca986f2362e29a2bc933c446fe89f39dbe4e9c \
-    --hash=sha256:a21fedebb3fb8f6bbbba51a11114f08c78709377051384c9c5ead5705ee93a51
+alembic==1.7.1; python_version >= "3.6" \
+    --hash=sha256:25f996b7408b11493d6a2d669fd9d2ff8d87883fe7434182bc7669d6caa526ab \
+    --hash=sha256:aea964d3dcc9c205b8759e4e9c1c3935ea3afeee259bffd7ed8414f8085140fb
 branca==0.4.2; python_version >= "3.5" \
     --hash=sha256:62c2e777f074fc1830cd40ba9e650beb941861075980babafead8d97856b1a4b \
     --hash=sha256:c111453617b17ab2bda60a4cd71787d6f2b59c85cdf71ab160a737606ac66c31
@@ -93,6 +93,9 @@ gunicorn==20.1.0; python_version >= "3.5" \
 idna==3.2; python_version >= "3.5" and python_full_version < "3.0.0" or python_full_version >= "3.6.0" and python_version >= "3.5" \
     --hash=sha256:14475042e284991034cb48e06f6851428fb14c4dc953acd9be9a5e95c7b6dd7a \
     --hash=sha256:467fbad99067910785144ce333826c71fb0e63a425657295239737f7ecd125f3
+importlib-resources==5.2.2; python_version < "3.9" and python_version >= "3.6" \
+    --hash=sha256:2480d8e07d1890056cb53c96e3de44fead9c62f2ba949b0f2e4c4345f4afa977 \
+    --hash=sha256:a65882a4d0fe5fbf702273456ba2ce74fe44892c25e42e057aca526b702a6d4b
 itsdangerous==1.1.0; python_version >= "2.7" and python_full_version < "3.0.0" or python_full_version >= "3.5.0" \
     --hash=sha256:b12271b2047cb23eeb98c8b5622e2e5c5e9abd9784a153e9d8ef9cb4dd09d749 \
     --hash=sha256:321b033d07f2a4136d3ec762eac9f16a10ccd60f53c0c91af90217ace7ba1f19
@@ -155,10 +158,10 @@ lxml==4.6.3; (python_version >= "2.7" and python_full_version < "3.0.0") or (pyt
     --hash=sha256:33bb934a044cf32157c12bfcfbb6649807da20aa92c062ef51903415c704704f \
     --hash=sha256:542d454665a3e277f76954418124d67516c5f88e51a900365ed54a9806122b83 \
     --hash=sha256:39b78571b3b30645ac77b95f7c69d1bffc4cf8c3b157c435a34da72e78c82468
-mako==1.1.5; python_version >= "3.6" and python_full_version < "3.0.0" or python_full_version >= "3.6.0" and python_version >= "3.6" \
+mako==1.1.5; python_version >= "3.6" and python_full_version < "3.0.0" or python_full_version >= "3.4.0" and python_version >= "3.6" \
     --hash=sha256:6804ee66a7f6a6416910463b00d76a7b25194cd27f1918500c5bd7be2a088a23 \
     --hash=sha256:169fa52af22a91900d852e937400e79f535496191c63712e3b9fda5a9bed6fc3
-markupsafe==2.0.1; python_version >= "3.6" and python_full_version < "3.0.0" or python_full_version >= "3.6.0" and python_version >= "3.6" \
+markupsafe==2.0.1; python_version >= "3.6" and python_full_version < "3.0.0" or python_full_version >= "3.5.0" and python_version >= "3.6" \
     --hash=sha256:f9081981fe268bd86831e5c75f7de206ef275defcb82bc70740ae6dc507aee51 \
     --hash=sha256:0955295dd5eec6cb6cc2fe1698f4c6d84af2e92de33fbcac4111913cd100a6ff \
     --hash=sha256:0446679737af14f45767963a1a9ef7620189912317d095f2d9ffa183a4d25d2b \
@@ -228,25 +231,26 @@ numpy==1.21.1; python_version >= "3.7" and python_full_version >= "3.7.1" \
     --hash=sha256:01721eefe70544d548425a07c80be8377096a54118070b8a62476866d5208e33 \
     --hash=sha256:2d4d1de6e6fb3d28781c73fbde702ac97f03d79e4ffd6598b880b2d95d62ead4 \
     --hash=sha256:dff4af63638afcc57a3dfb9e4b26d434a7a602d225b42d746ea7fe2edf1342fd
-pandas==1.2.5; python_full_version >= "3.7.1" \
-    --hash=sha256:1102d719038e134e648e7920672188a00375f3908f0383fd3b202fbb9d2c3a95 \
-    --hash=sha256:38e7486410de23069392bdf1dc7297ae75d2d67531750753f3149c871cd1c6e3 \
-    --hash=sha256:94ca6ea3f46f44a979a38a4d5a70a88cee734f7248d7aeeed202e6b3ba485af1 \
-    --hash=sha256:821d92466fcd2826656374a9b6fe4f2ec2ba5e370cce71d5a990577929d948df \
-    --hash=sha256:0dbd125b0e44e5068163cbc9080a00db1756a5e36309329ae14fd259747f2300 \
-    --hash=sha256:7b09293c7119ab22ab3f7f086f813ac2acbfa3bcaaaeb650f4cddfb5b9fa9be4 \
-    --hash=sha256:fc9215dd1dd836ff26b896654e66b2dfcf4bbb18aa4c1089a79bab527b665a90 \
-    --hash=sha256:e36515163829e0e95a6af10820f178dd8768102482c01872bff8ae592e508e58 \
-    --hash=sha256:0c34b89215f984a9e4956446e0a29330d720085efa08ea72022387ee37d8b373 \
-    --hash=sha256:f20e4b8a7909f5a0c0a9e745091e3ea18b45af9f73496a4d498688badbdac7ea \
-    --hash=sha256:9244fb0904512b074d8c6362fb13aac1da6c4db94372760ddb2565c620240264 \
-    --hash=sha256:c862cd72353921c102166784fc4db749f1c3b691dd017fc36d9df2c67a9afe4e \
-    --hash=sha256:d9e6edddeac9a8e473391d2d2067bb3c9dc7ad79fd137af26a39ee425c2b4c78 \
-    --hash=sha256:a67227e17236442c6bc31c02cb713b5277b26eee204eac14b5aecba52492e3a3 \
-    --hash=sha256:4bfbf62b00460f78a8bc4407112965c5ab44324f34551e8e1f4cac271a07706c \
-    --hash=sha256:25fc8ef6c6beb51c9224284a1ad89dfb591832f23ceff78845f182de35c52356 \
-    --hash=sha256:78de96c1174bcfdbe8dece9c38c2d7994e407fd8bb62146bb46c61294bcc06ef \
-    --hash=sha256:14abb8ea73fce8aebbb1fb44bec809163f1c55241bcc1db91c2c780e97265033
+pandas==1.3.2; python_full_version >= "3.7.1" \
+    --hash=sha256:ba7ceb8abc6dbdb1e34612d1173d61e4941f1a1eb7e6f703b2633134ae6a6c89 \
+    --hash=sha256:fcb71b1935249de80e3a808227189eee381d4d74a31760ced2df21eedc92a8e3 \
+    --hash=sha256:fa54dc1d3e5d004a09ab0b1751473698011ddf03e14f1f59b84ad9a6ac630975 \
+    --hash=sha256:34ced9ce5d5b17b556486da7256961b55b471d64a8990b56e67a84ebeb259416 \
+    --hash=sha256:a56246de744baf646d1f3e050c4653d632bc9cd2e0605f41051fea59980e880a \
+    --hash=sha256:53b17e4debba26b7446b1e4795c19f94f0c715e288e08145e44bdd2865e819b3 \
+    --hash=sha256:f07a9745ca075ae73a5ce116f5e58f691c0dc9de0bff163527858459df5c176f \
+    --hash=sha256:c9e8e0ce5284ebebe110efd652c164ed6eab77f5de4c3533abc756302ee77765 \
+    --hash=sha256:59a78d7066d1c921a77e3306aa0ebf6e55396c097d5dfcc4df8defe3dcecb735 \
+    --hash=sha256:132def05e73d292c949b02e7ef873debb77acc44a8b119d215921046f0c3a91d \
+    --hash=sha256:69e1b2f5811f46827722fd641fdaeedb26002bd1e504eacc7a8ec36bdc25393e \
+    --hash=sha256:7996d311413379136baf0f3cf2a10e331697657c87ced3f17ac7c77f77fe34a3 \
+    --hash=sha256:1738154049062156429a5cf2fd79a69c9f3fa4f231346a7ec6fd156cd1a9a621 \
+    --hash=sha256:9cce01f6d655b4add966fcd36c32c5d1fe84628e200626b3f5e2f40db2d16a0f \
+    --hash=sha256:1099e2a0cd3a01ec62cca183fc1555833a2d43764950ef8cb5948c8abfc51014 \
+    --hash=sha256:0cd5776be891331a3e6b425b5abeab9596abea18435c5982191356f9b24ae731 \
+    --hash=sha256:66a95361b81b4ba04b699ecd2416b0591f40cd1e24c60a8bfe0d19009cfa575a \
+    --hash=sha256:89f40e5d21814192802421df809f948247d39ffe171e45fe2ab4abf7bd4279d8 \
+    --hash=sha256:cbcb84d63867af3411fa063af3de64902665bb5b3d40b25b2059e40603594e87
 psycopg2-binary==2.9.1; python_version >= "3.6" \
     --hash=sha256:b0221ca5a9837e040ebf61f48899926b5783668b7807419e4adae8175a31f773 \
     --hash=sha256:c250a7ec489b652c892e4f0a5d122cc14c3780f9f643e1a326754aedf82d9a76 \
@@ -277,41 +281,52 @@ psycopg2-binary==2.9.1; python_version >= "3.6" \
     --hash=sha256:3242b9619de955ab44581a03a64bdd7d5e470cc4183e8fcadd85ab9d3756ce7a \
     --hash=sha256:0b7dae87f0b729922e06f85f667de7bf16455d411971b2043bbd9577af9d1975 \
     --hash=sha256:b4d7679a08fea64573c969f6994a2631908bb2c0e69a7235648642f3d2e39a68
-python-dateutil==2.8.2; python_full_version >= "3.7.1" and python_version >= "3.6" \
+python-dateutil==2.8.2; python_full_version >= "3.7.1" \
     --hash=sha256:0123cacc1627ae19ddf3c27a5de5bd67ee4586fbdd6440d9748f8abb483d3e86 \
     --hash=sha256:961d03dc3453ebbc59dbdea9e4e11c5651520a876d0f4db161e8674aae935da9
-python-dotenv==0.18.0 \
-    --hash=sha256:effaac3c1e58d89b3ccb4d04a40dc7ad6e0275fda25fd75ae9d323e2465e202d \
-    --hash=sha256:dd8fe852847f4fbfadabf6183ddd4c824a9651f02d51714fa075c95561959c7d
-python-editor==1.0.4; python_version >= "3.6" and python_full_version < "3.0.0" or python_full_version >= "3.6.0" and python_version >= "3.6" \
-    --hash=sha256:51fda6bcc5ddbbb7063b2af7509e43bd84bfc32a4ff71349ec7847713882327b \
-    --hash=sha256:5f98b069316ea1c2ed3f67e7f5df6c0d8f10b689964a4a811ff64f0106819ec8 \
-    --hash=sha256:ea87e17f6ec459e780e4221f295411462e0d0810858e055fc514684350a2f522 \
-    --hash=sha256:1bf6e860a8ad52a14c3ee1252d5dc25b2030618ed80c022598f00176adc8367d \
-    --hash=sha256:c3da2053dbab6b29c94e43c486ff67206eafbe7eb52dbec7390b5e2fb05aac77
+python-dotenv==0.19.0; python_version >= "3.5" \
+    --hash=sha256:f521bc2ac9a8e03c736f62911605c5d83970021e3fa95b37d769e2bbbe9b6172 \
+    --hash=sha256:aae25dc1ebe97c420f50b81fb0e5c949659af713f31fdb63c749ca68748f34b1
 pytz==2021.1; python_full_version >= "3.7.1" \
     --hash=sha256:eb10ce3e7736052ed3623d49975ce333bcd712c7bb19a58b9e2089d4057d0798 \
     --hash=sha256:83a4a90894bf38e243cf052c8b58f381bfe9a7a483f6a9cab140bc7f702ac4da
 requests==2.26.0; (python_version >= "2.7" and python_full_version < "3.0.0") or (python_full_version >= "3.6.0") \
     --hash=sha256:6c1246513ecd5ecd4528a0906f910e8f0f9c6b8ec72030dc9fd154dc1a6efd24 \
     --hash=sha256:b8aa58f8cf793ffd8782d3d8cb19e66ef36f7aba4353eec859e74678b01b07a7
-scikit-learn==0.23.2; python_version >= "3.6" \
-    --hash=sha256:20766f515e6cd6f954554387dfae705d93c7b544ec0e6c6a5d8e006f6f7ef480 \
-    --hash=sha256:98508723f44c61896a4e15894b2016762a55555fbf09365a0bb1870ecbd442de \
-    --hash=sha256:a64817b050efd50f9abcfd311870073e500ae11b299683a519fbb52d85e08d25 \
-    --hash=sha256:daf276c465c38ef736a79bd79fc80a249f746bcbcae50c40945428f7ece074f8 \
-    --hash=sha256:cb3e76380312e1f86abd20340ab1d5b3cc46a26f6593d3c33c9ea3e4c7134028 \
-    --hash=sha256:0a127cc70990d4c15b1019680bfedc7fec6c23d14d3719fdf9b64b22d37cdeca \
-    --hash=sha256:2aa95c2f17d2f80534156215c87bee72b6aa314a7f8b8fe92a2d71f47280570d \
-    --hash=sha256:6c28a1d00aae7c3c9568f61aafeaad813f0f01c729bee4fd9479e2132b215c1d \
-    --hash=sha256:da8e7c302003dd765d92a5616678e591f347460ac7b53e53d667be7dfe6d1b10 \
-    --hash=sha256:d9a1ce5f099f29c7c33181cc4386660e0ba891b21a60dc036bf369e3a3ee3aec \
-    --hash=sha256:914ac2b45a058d3f1338d7736200f7f3b094857758895f8667be8a81ff443b5b \
-    --hash=sha256:7671bbeddd7f4f9a6968f3b5442dac5f22bf1ba06709ef888cc9132ad354a9ab \
-    --hash=sha256:d0dcaa54263307075cb93d0bee3ceb02821093b1b3d25f66021987d305d01dce \
-    --hash=sha256:5ce7a8021c9defc2b75620571b350acc4a7d9763c25b7593621ef50f3bd019a2 \
-    --hash=sha256:0d39748e7c9669ba648acf40fb3ce96b8a07b240db6888563a7cb76e05e0d9cc \
-    --hash=sha256:1b8a391de95f6285a2f9adffb7db0892718950954b7149a70c783dc848f104ea
+scikit-learn==0.24.2; python_version >= "3.6" \
+    --hash=sha256:d14701a12417930392cd3898e9646cf5670c190b933625ebe7511b1f7d7b8736 \
+    --hash=sha256:d5bf9c863ba4717b3917b5227463ee06860fc43931dc9026747de416c0a10fee \
+    --hash=sha256:5beaeb091071625e83f5905192d8aecde65ba2f26f8b6719845bbf586f7a04a1 \
+    --hash=sha256:06ffdcaaf81e2a3b1b50c3ac6842cfb13df2d8b737d61f64643ed61da7389cde \
+    --hash=sha256:fec42690a2eb646b384eafb021c425fab48991587edb412d4db77acc358b27ce \
+    --hash=sha256:5ff3e4e4cf7592d36541edec434e09fb8ab9ba6b47608c4ffe30c9038d301897 \
+    --hash=sha256:3cbd734e1aefc7c5080e6b6973fe062f97c26a1cdf1a991037ca196ce1c8f427 \
+    --hash=sha256:f74429a07fedb36a03c159332b914e6de757176064f9fed94b5f79ebac07d913 \
+    --hash=sha256:dd968a174aa82f3341a615a033fa6a8169e9320cbb46130686562db132d7f1f0 \
+    --hash=sha256:49ec0b1361da328da9bb7f1a162836028e72556356adeb53342f8fae6b450d47 \
+    --hash=sha256:f18c3ed484eeeaa43a0d45dc2efb4d00fc6542ccdcfa2c45d7b635096a2ae534 \
+    --hash=sha256:cdf24c1b9bbeb4936456b42ac5bd32c60bb194a344951acb6bfb0cddee5439a4 \
+    --hash=sha256:d177fe1ff47cc235942d628d41ee5b1c6930d8f009f1a451c39b5411e8d0d4cf \
+    --hash=sha256:f3ec00f023d84526381ad0c0f2cff982852d035c921bbf8ceb994f4886c00c64 \
+    --hash=sha256:ae19ac105cf7ce8c205a46166992fdec88081d6e783ab6e38ecfbe45729f3c39 \
+    --hash=sha256:f0ed4483c258fb23150e31b91ea7d25ff8495dba108aea0b0d4206a777705350 \
+    --hash=sha256:39b7e3b71bcb1fe46397185d6c1a5db1c441e71c23c91a31e7ad8cc3f7305f9a \
+    --hash=sha256:90a297330f608adeb4d2e9786c6fda395d3150739deb3d42a86d9a4c2d15bc1d \
+    --hash=sha256:f1d2108e770907540b5248977e4cff9ffaf0f73d0d13445ee938df06ca7579c6 \
+    --hash=sha256:1eec963fe9ffc827442c2e9333227c4d49749a44e592f305398c1db5c1563393 \
+    --hash=sha256:2db429090b98045d71218a9ba913cc9b3fe78e0ba0b6b647d8748bc6d5a44080 \
+    --hash=sha256:62214d2954377fcf3f31ec867dd4e436df80121e7a32947a0b3244f58f45e455 \
+    --hash=sha256:8fac72b9688176922f9f54fda1ba5f7ffd28cbeb9aad282760186e8ceba9139a \
+    --hash=sha256:ae426e3a52842c6b6d77d00f906b6031c8c2cfdfabd6af7511bb4bc9a68d720e \
+    --hash=sha256:038f4e9d6ef10e1f3fe82addc3a14735c299866eb10f2c77c090410904828312 \
+    --hash=sha256:48f273836e19901ba2beecd919f7b352f09310ce67c762f6e53bc6b81cacf1f0 \
+    --hash=sha256:a2a47449093dcf70babc930beba2ca0423cb7df2fa5fd76be5260703d67fa574 \
+    --hash=sha256:0e71ce9c7cbc20f6f8b860107ce15114da26e8675238b4b82b7e7cd37ca0c087 \
+    --hash=sha256:2754c85b2287333f9719db7f23fb7e357f436deed512db3417a02bf6f2830aa5 \
+    --hash=sha256:7be1b88c23cfac46e06404582215a917017cd2edaa2e4d40abe6aaff5458f24b \
+    --hash=sha256:4e6198675a6f9d333774671bd536668680eea78e2e81c0b19e57224f58d17f37 \
+    --hash=sha256:cbdb0b3db99dd1d5f69d31b4234367d55475add31df4d84a3bd690ef017b55e2 \
+    --hash=sha256:40556bea1ef26ef54bc678d00cf138a63069144a0b5f3a436eecd8f3468b903e
 scipy==1.6.1; python_version >= "3.7" \
     --hash=sha256:a15a1f3fc0abff33e792d6049161b7795909b40b97c6cc2934ed54384017ab76 \
     --hash=sha256:e79570979ccdc3d165456dd62041d9556fb9733b86b4b6d818af7a0afc15f092 \
@@ -378,3 +393,6 @@ urllib3==1.26.6; python_version >= "3.5" and python_full_version < "3.0.0" or py
 werkzeug==1.0.1; python_version >= "2.7" and python_full_version < "3.0.0" or python_full_version >= "3.5.0" \
     --hash=sha256:2de2a5db0baeae7b2d2664949077c2ac63fbd16d98da0ff71837f7d1dea3fd43 \
     --hash=sha256:6c80b1e5ad3665290ea39320b91e1be1e0d5f60652b964a3070216de83d2e47c
+zipp==3.5.0; python_version < "3.9" and python_version >= "3.6" \
+    --hash=sha256:957cfda87797e389580cb8b9e3870841ca991e2125350677b2ca83a0e99390a3 \
+    --hash=sha256:f5812b1e007e48cff63449a5e9f4e7ebea716b4111f9c4f9a645f91d579bf0c4
