--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,7 +6,7 @@ authors = ["Douglas Braga <douglasmartinsbraga@gmail.com>"]
 
 [tool.poetry.dependencies]
 python = "~=3.8"
-geopy = "^~=2.1"
+geopy = "~=2.1"
 pandas = "~=1.3"
 scikit-learn = "~=0.24"
 Flask = "~=1.1"
@@ -22,18 +22,19 @@ marshmallow-sqlalchemy = "~=0.26"
 dynaconf = "~=3.1"
 python-dotenv = "~=0.18"
 psycopg2-binary = "~=2.9"
-lightgbm = "~=3.2"
+xgboost = "≃1.4"
+dash-bootstrap-components = "~=0.13"
 
 [tool.poetry.dev-dependencies]
-mypy = "^~=0.812"
+mypy = "~=0.812"
 black = "~=20.8b1"
 jupyterlab = "~=3.0"
 matplotlib = "~=3.3"
-xgboost = "~=1.4"
 tqdm = "~=4.62"
 plotly = "~=5.2"
 ipywidgets = "~=7.6"
 optuna = "~=2.9"
+lightgbm = "≃3.2"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
